[workspace]
members = [
    "nrf5x-prx",
    "nrf5x-ptx",
]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
debug-assertions = true

[patch.crates-io.maitake-sync]
git = "https://github.com/jamesmunns/mycelium/"
rev = "3d70f02bcc0de0e0cc0602ddc2b4aee7a34c5201"
