[package]
edition = "2021"
name = "embassy-esb-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# embassy-futures         = { version = "0.1.0" }
# embassy-sync            = { version = "0.6.1", features = ["defmt"] }
embassy-executor        = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time            = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime-us"] }
embassy-nrf             = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
# embassy-usb             = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
mutex = "0.1.0"

[dependencies.esb]
path = "../../esb"
