[package]
name = "nrf5x-ptx"
version = "0.0.1"
edition = "2018"
authors = [ "Thales Fragoso <thales.fragosoz@gmail.com>"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rtfm = "0.5.1"
# esb = "0.1.0"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }

nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}

[dependencies.esb]
path = "../../esb"

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf5x-ptx"
doc = false
test = false

[features]
default = ["52840"]
fast-ru = ["esb/fast-ru"]
51 = ["nrf51-hal"]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
